--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
 </head>
 <body>
 
+  <!-- Container for displaying messages -->
   <div id="messages-container"></div>
 
+  <!-- Button to toggle the display of generated images -->
   <button onclick="toggleImages()">Toggle Images</button>
 
+  <!-- Input for the number of players -->
   <label for="playerCount">Number of Players:</label>
   <input type="number" id="playerCount" name="playerCount" min="8" max="31" step="1">
 
+  <!-- Button to generate and display the result -->
   <button onclick="generateAndDisplay()">Generate Result</button>
 
+  <!-- Container for displaying the generated result -->
   <div id="result-container"></div>
 
+  <!-- Script file for JavaScript logic -->
   <script src="script.js"></script>
 
 </body>
