States affect fn txt stable

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Werewolf Max Guide</title>
+  <title>Werewolves on the Clocktower Companion</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -26,6 +26,9 @@
 
   <!-- Container for displaying the generated result -->
   <div id="result-container"></div>
+
+  <!-- Adding some empty elements to prevent null Lists -->
+  <p id="fn-txt-1"></p>
 
   <!-- Script file for JavaScript logic -->
   <script src="script.js"></script>
