--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Werewolves on thr Clocktower Guide Companion
+<!-- Werewolves on the Clocktower Guide Companion
      by AnJoMorto -->
 
 <!DOCTYPE html>
@@ -6,7 +6,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Werewolves on the Clocktower Companion</title>
+  <title>Lobisomens na Torre Sangrenta - Guiã Interativo</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,14 +15,14 @@
   <div id="messages-container"></div>
 
   <!-- Button to toggle the display of generated images -->
-  <button onclick="toggleImages()">Toggle Images</button>
+  <button onclick="toggleImages()">Desativar/Ativar Imagens</button>
 
   <!-- Input for the number of players -->
-  <label for="playerCount">Number of Players:</label>
+  <label for="playerCount">Número de Jogadores:</label>
   <input type="number" id="playerCount" name="playerCount" min="8" step="1">
 
   <!-- Button to generate and display the result -->
-  <button onclick="generateAndDisplay()">Generate Result</button>
+  <button onclick="generateAndDisplay()">Gerar Personagens</button>
 
   <!-- Container for displaying the generated result -->
   <div id="result-container"></div>
