--- a/index.html
+++ b/index.html
@@ -3,32 +3,40 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lobisomens na Torre Sangrenta - Guiã Interativo</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Werewolves on the Clocktower</title>
+  </head>
+  <body>
+    <header>
+      <h1>Werewolves on the Clocktower</h1>
+    </header>
 
-  <!-- Container for displaying messages -->
-  <div id="messages-container"></div>
+    <!-- Container for displaying messages -->
+    <div id="messages-container"></div>
 
-  <!-- Button to toggle the display of generated images -->
-  <button onclick="toggleImages()">Desativar/Ativar Imagens</button>
+    <!-- Button to toggle the display of generated images -->
+    <button onclick="toggleImages()">Desativar/Ativar Imagens</button>
 
-  <!-- Input for the number of players -->
-  <label for="playerCount">Número de Jogadores:</label>
-  <input type="number" id="playerCount" name="playerCount" min="8" step="1">
+    <!-- Input for the number of players -->
+    <label for="playerCount">Número de Jogadores:</label>
+    <input type="number" id="playerCount" name="playerCount" min="8" step="1">
 
-  <!-- Button to generate and display the result -->
-  <button onclick="generateAndDisplay()">Gerar Personagens</button>
+    <!-- Button to generate and display the result -->
+    <button onclick="generateAndDisplay()">Gerar Personagens</button>
 
-  <!-- Container for displaying the generated result -->
-  <div id="result-container"></div>
+    <!-- Container for displaying the generated result -->
+    <div id="result-container"></div>
 
-  <!-- Script file for JavaScript logic -->
-  <script src="script.js"></script>
+    <footer>
+      <p>&nbsp</p>
+      <p>&copy; 2024 - AnJoMorto - Werewolves on the Clocktower. Some rights reserved.</p>
+    </footer>
 
-</body>
+    <!-- Script file for JavaScript logic -->
+    <script src="script.js"></script>
+
+  </body>
 </html>
