Added favicon for no reason

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Werewolves on the Clocktower</title>
+    <title>Lobisomens na Torre Sangrenta</title>
+    <link rel="icon" href="ai_logo.ico">
   </head>
+
   <body>
     <header>
-      <h1>Werewolves on the Clocktower</h1>
+      <h1>Lobisomens na Torre Sangrenta</h1>
     </header>
 
     <!-- Container for displaying messages -->
