just random changes to the word that impacted here

--- a/old_versions/b4_testdrive.html
+++ b/old_versions/b4_testdrive.html
@@ -38,7 +38,7 @@
     </footer>
 
     <!-- Script file for JavaScript logic -->
-    <script src="script.js"></script>
+    <script src="b4_testdrive.js"></script>
 
   </body>
 </html>
